--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,12 @@
   <h1 id="status">Waiting for opponent...</h1>
   <h4 id="timer">Elapsed time: <span id="elapsed">00:00:00</span><span> - Tap count: </span><span id="tapCount">0</span></h4>
   <div id="arena">
-    <div class="energy" id="energy1"></div>
-    <div class="energy" id="energy2"></div>
+    <div class="energy-wrapper" id="energyWrapper1">
+      <div class="energy" id="energy1"></div>
+    </div>
+    <div class="energy-wrapper" id="energyWrapper2">
+      <div class="energy" id="energy2"></div>
+    </div>
   </div>
   
   <button id="boostBtn" disabled>Boost</button>
