--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
   
   <button id="rematchSameBtn" style="display: none;">Rematch</button>
   <button id="rematch" style="display: none">Find New Opponent</button>
+
+  <div id="statistic">
+    
+  </div>
   <script src="/socket.io/socket.io.js"></script>
   <script src="client.js"></script>
 </body>
