--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,11 @@
   <div id="arena">
     <div class="energy-wrapper" id="energyWrapper1">
       <div class="energy" id="energy1"></div>
+      <div class="aura" id="aura1"><img src="boost-aura-right.gif"></div>
     </div>
     <div class="energy-wrapper" id="energyWrapper2">
       <div class="energy" id="energy2"></div>
+      <div class="aura" id="aura2"><img src="boost-aura-left.gif"></div>
     </div>
   </div>
   
