--- a/public/index.html
+++ b/public/index.html
@@ -20,10 +20,12 @@
     </div>
   </div>
   
-  <button id="boostBtn" disabled>Boost</button>
-  <button id="powerBtn" disabled>Charge</button>
-  <button id="tapBtn" disabled>Push</button>
-  
+  <div class="btn-wrapper">
+    <button id="boostBtn" disabled>Boost</button>
+    <button id="powerBtn" disabled>Charge</button>
+    <button id="tapBtn" disabled>Push</button>
+  </div>
+
   <button id="rematchSameBtn" style="display: none;">Rematch</button>
   <button id="rematch" style="display: none">Find New Opponent</button>
 
