--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
       <div class="energy" id="energy2"></div>
       <div class="aura" id="aura2"><img src="boost-aura-left.gif"></div>
     </div>
+    <div class="crack" id="crackLeft"></div>
+    <div class="crack" id="crackRight"></div>
   </div>
   
   <div class="btn-wrapper">
