--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
 <body>
   <h1 id="status">Waiting for opponent...</h1>
   <h4 id="timer">Elapsed time: <span id="elapsed">00:00:00</span><span> - Tap count: </span><span id="tapCount">0</span></h4>
+  <div class="playerSignSection">
+    <span class="playerSign" id="playerSign1">Player 1</span>
+    <span class="playerSign" id="playerSign2">Player 2</span>
+  </div>
   <div id="arena">
     <div class="energy-wrapper" id="energyWrapper1">
       <div class="energy" id="energy1"></div>
