--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
                     <li>Increase your <strong>push power</strong></li>
                     <li>Grow your ball in <strong>size</strong></li>
                 </ul>
-                <p class="warning-tip">⚠️ <strong>Bigger balls are heavier and harder to push, but they hit harder!</strong></p>
+                <p class="warning-tip">⚠️ <strong>Bigger balls are heavier and harder to push</strong></p>
             </div>
 
             <div class="control-section">
@@ -69,6 +69,7 @@
         <div class="boost-energy-card">
             <h3>⚡ Boost Energy Tips</h3>
             <p>The bigger your ball, the <strong>less Boost Energy</strong> it can hold</p>
+            <p>The closer you get to victory, the <strong>less potent</strong> your boost becomes</p>
             <p>Use your <strong>Boost wisely!</strong></p>
         </div>
 
