--- a/public/index.html
+++ b/public/index.html
@@ -1,84 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>HDM Power Versus</title>
-  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>HDM Power Versus</title>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styleLanding.css" />
 </head>
 <body>
-  <h1 id="status">Waiting for opponent...</h1>
-  <h4 id="timer">Elapsed time: <span id="elapsed">00:00:00</span><span> - Tap count: </span><span id="tapCount">0</span></h4>
-  <div class="playerSignSection">
-    <span class="playerSign" id="playerSign1">Player 1</span>
-    <span class="playerSign" id="playerSign2">Player 2</span>
-  </div>
-  <div id="arena">
-    <div class="energy-wrapper" id="energyWrapper1">
-      <div class="energy" id="energy1"></div>
-      <div class="aura" id="aura1"><img src="boost-aura-right.gif"></div>
+    <div class="landing" id="landing">
+        <h1 class="game-title">
+            HDM Power Versus
+        </h1>
+        <div class="button-container">
+          <div class="landing-btn-wrapper">
+            <button class="btn btn-random" id="btnRandom"> Random Match </button>
+            <button class="btn btn-create" id="btnCreate"> Create Room </button>
+          </div>
+          <div class="or-container"> <span>or</span> </div>
+          <div class="landing-btn-wrapper">
+            <input type="text" id="roomInput" placeholder="Room ID" class="room-input">
+            <button class="btn btn-join" id="btnJoin">
+              Join Room
+            </button>
+          </div>
+          <div class="or-container"> <span> *** </span> </div>
+           <div class="landing-btn-wrapper">
+            <button class="btn btn-instruction" id="btnInstruction"> Instruction </button>
+          </div>
+        </div>
+ 
+        <div class="instruction-popup" id="instructionPopup" onclick="this.style.display = 'none'">
+          <div class="game-instructions-container">
+              <h2>Game Controls & Mechanics</h2>
+              <div class="controls-wrapper">
+                  <div class="control-section">
+                      <h3>1. Push Button</h3>
+                      <p>Tap to push the ball forward. The more <strong>power</strong> you have, the farther it goes!</p>
+                  </div>
+                  <div class="control-section">
+                      <h3>2. Charge Button</h3>
+                      <p>Hold to charge up your strength. Charging will:</p>
+                      <ul>
+                          <li>Increase your <strong>push power</strong></li>
+                          <li>Grow your ball in <strong>size</strong></li>
+                      </ul>
+                      <p class="warning-tip">⚠️ <strong>Bigger balls are heavier and harder to push</strong></p>
+                  </div>
+                  <div class="control-section">
+                      <h3>3. Boost Button</h3>
+                      <p>Activate to <strong>multiply your push power!</strong></p>
+                      <ul>
+                          <li>Press manually at any time</li>
+                          <li>Or it activates automatically when you're about to lose, as long as you have enough Boost Energy</li>
+                      </ul>
+                  </div>
+              </div>
+              <div class="boost-energy-card">
+                  <h3>⚡ Boost Energy Tips</h3>
+                  <p>The bigger your ball, the <strong>less Boost Energy</strong> it can hold</p>
+                  <p>The closer you get to victory, the <strong>less potent</strong> your boost becomes</p>
+                  <p>Use your <strong>Boost wisely!</strong></p>
+              </div>
+            <div id="myOverlay" class="overlay">
+              <span class="tap-text">Tap anywhere to close</span>
+            </div>
+          </div>
+        </div>
     </div>
-    <div class="energy-wrapper" id="energyWrapper2">
-      <div class="energy" id="energy2"></div>
-      <div class="aura" id="aura2"><img src="boost-aura-left.gif"></div>
+    <div class="ingame-wrapper" id="ingameWrapper">
+        <h2 id="status">Waiting for opponent...</h2>
+        <h4 id="timer">Elapsed time: <span id="elapsed">00:00:00</span><span> - Tap count: </span><span id="tapCount">0</span></h4>
+        <div class="room-id-container" onclick="copy()"> <span class="roomId" id="roomId"></span> </div>
+        <div class="playerSignSection">
+            <span class="playerSign" id="playerSign1">Player 1</span>
+            <span class="playerSign" id="playerSign2">Player 2</span>
+        </div>
+        <div id="arena">
+            <div class="energy-wrapper" id="energyWrapper1">
+                <div class="energy" id="energy1"></div>
+                <div class="aura" id="aura1"><img src="boost-aura-right.gif"></div>
+            </div>
+            <div class="energy-wrapper" id="energyWrapper2">
+                <div class="energy" id="energy2"></div>
+                <div class="aura" id="aura2"><img src="boost-aura-left.gif"></div>
+            </div>
+            <div class="crack" id="crackLeft"></div>
+            <div class="crack" id="crackRight"></div>
+        </div>
+        <div class="btn-wrapper">
+            <button id="boostBtn" style="display: none;" disabled >Boost</button>
+            <button id="powerBtn" style="display: none;" disabled>Charge</button>
+            <button id="tapBtn" style="display: none;" disabled>Push</button>
+            <button id="rematchSameBtn" style="display: none;" style="display: none;">Rematch</button>
+            <button id="rematch" style="display: none">Find New Opponent</button>
+            <button id="exitBtn">Return</button>
+        </div>
     </div>
-    <div class="crack" id="crackLeft"></div>
-    <div class="crack" id="crackRight"></div>
-  </div>
-  
-  <div class="btn-wrapper">
-    <button id="boostBtn" disabled>Boost</button>
-    <button id="powerBtn" disabled>Charge</button>
-    <button id="tapBtn" disabled>Push</button>
-    <button id="rematchSameBtn" style="display: none;">Rematch</button>
-    <button id="rematch" style="display: none">Find New Opponent</button>
-  </div>
-  
-  <div class="instruction-popup" id="instructionPopup">
-   <div class="game-instructions-container">
-        <h2>Game Controls & Mechanics</h2>
-
-        <div class="controls-wrapper">
-            <div class="control-section">
-                <h3>1. Push Button</h3>
-                <p>Tap to push the ball forward. The more <strong>power</strong> you have, the farther it goes!</p>
-            </div>
-
-            <div class="control-section">
-                <h3>2. Charge Button</h3>
-                <p>Hold to charge up your strength. Charging will:</p>
-                <ul>
-                    <li>Increase your <strong>push power</strong></li>
-                    <li>Grow your ball in <strong>size</strong></li>
-                </ul>
-                <p class="warning-tip">⚠️ <strong>Bigger balls are heavier and harder to push</strong></p>
-            </div>
-
-            <div class="control-section">
-                <h3>3. Boost Button</h3>
-                <p>Activate to <strong>multiply your push power!</strong></p>
-                <ul>
-                    <li>Press manually at any time</li>
-                    <li>Or it activates automatically when you're about to lose, as long as you have enough Boost Energy</li>
-                </ul>
-            </div>
-        </div>
-
-        <!-- New separate card for Boost Energy Tips -->
-        <div class="boost-energy-card">
-            <h3>⚡ Boost Energy Tips</h3>
-            <p>The bigger your ball, the <strong>less Boost Energy</strong> it can hold</p>
-            <p>The closer you get to victory, the <strong>less potent</strong> your boost becomes</p>
-            <p>Use your <strong>Boost wisely!</strong></p>
-        </div>
-
-               <!-- Instruction for tapping anywhere -->
-        <div class="tap-anywhere-instruction">
-            TAP ANYWHERE TO CLOSE
-        </div>
-  </div>
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="client.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="client.js"></script>
 </body>
 </html>
